--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,12 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+    <Button
+        android:id="@+id/refresh_button"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/refresh"
+        android:onClick="refreshClick"/>
 
 </RelativeLayout>
