--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,8 +7,11 @@
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-    <item   android:id="@+id/reset"
+    <item android:id="@+id/reset"
         android:title="@string/reset_stats"
         app:showAsAction="never"/>
+    <item android:id="@+id/refresh"
+    android:title="@string/refresh"
+    app:showAsAction="never"/>
 
 </menu>
